--- a/.gitmodules
+++ b/.gitmodules
@@ -52,3 +52,6 @@
 [submodule "packages/get"]
 	path = packages/get
 	url = git://github.com/obullo/get.git
+[submodule "packages/hmvc"]
+	path = packages/hmvc
+	url = git://github.com/obullo/hmvc.git
