--- a/.gitmodules
+++ b/.gitmodules
@@ -58,3 +58,6 @@
 [submodule "packages/hooks"]
 	path = packages/hooks
 	url = git://github.com/obullo/hooks.git
+[submodule "packages/html"]
+	path = packages/html
+	url = git://github.com/obullo/html.git
