--- a/.gitmodules
+++ b/.gitmodules
@@ -61,3 +61,6 @@
 [submodule "packages/html"]
 	path = packages/html
 	url = git://github.com/obullo/html.git
+[submodule "packages/lingo"]
+	path = packages/lingo
+	url = git://github.com/obullo/lingo.git
