added new submodule package/ schema_mysql

--- a/.gitmodules
+++ b/.gitmodules
@@ -124,3 +124,6 @@
 [submodule "packages/router"]
 	path = packages/router
 	url = git://github.com/obullo/router.git
+[submodule "packages/schema_mysql"]
+	path = packages/schema_mysql
+	url = git://github.com/obullo/schema_mysql.git
