--- a/.gitmodules
+++ b/.gitmodules
@@ -127,3 +127,6 @@
 [submodule "packages/schema_mysql"]
 	path = packages/schema_mysql
 	url = git://github.com/obullo/schema_mysql.git
+[submodule "packages/security"]
+	path = packages/security
+	url = git://github.com/obullo/security.git
