--- a/.gitmodules
+++ b/.gitmodules
@@ -145,3 +145,6 @@
 [submodule "packages/stringo"]
 	path = packages/stringo
 	url = git://github.com/obullo/stringo.git
+[submodule "packages/task"]
+	path = packages/task
+	url = git://github.com/obullo/task.git
