--- a/.gitmodules
+++ b/.gitmodules
@@ -151,3 +151,6 @@
 [submodule "packages/text"]
 	path = packages/text
 	url = git://github.com/obullo/text.git
+[submodule "packages/uri"]
+	path = packages/uri
+	url = git://github.com/obullo/uri.git
