added new submodule package/ utf8

--- a/.gitmodules
+++ b/.gitmodules
@@ -157,3 +157,6 @@
 [submodule "packages/url"]
 	path = packages/url
 	url = git://github.com/obullo/url.git
+[submodule "packages/utf8"]
+	path = packages/utf8
+	url = git://github.com/obullo/utf8.git
