--- a/.gitmodules
+++ b/.gitmodules
@@ -181,3 +181,6 @@
 [submodule "packages/cool_captcha"]
 	path = packages/cool_captcha
 	url = git://github.com/obullo/cool_captcha.git
+[submodule "packages/uform"]
+	path = packages/uform
+	url = git://github.com/obullo/uform.git
