--- a/.gitmodules
+++ b/.gitmodules
@@ -181,3 +181,6 @@
 [submodule "packages/pdo_pgsql"]
 	path = packages/pdo_pgsql
 	url = git://github.com/obullo/pdo_pgsql.git
+[submodule "packages/captcha"]
+	path = packages/captcha
+	url = git://github.com/obullo/captcha.git
