--- a/.gitmodules
+++ b/.gitmodules
@@ -187,3 +187,6 @@
 [submodule "packages/sess_cache"]
 	path = packages/sess_cache
 	url = git://github.com/obullo/sess_cache.git
+[submodule "packages/tag_cloud"]
+	path = packages/tag_cloud
+	url = git://github.com/obullo/tag_cloud.git
