--- a/.gitmodules
+++ b/.gitmodules
@@ -190,3 +190,6 @@
 [submodule "packages/schema"]
 	path = packages/schema
 	url = git://github.com/obullo/schema.git
+[submodule "packages/tag_cloud"]
+	path = packages/tag_cloud
+	url = git://github.com/obullo/tag_cloud.git
