--- a/.gitmodules
+++ b/.gitmodules
@@ -193,3 +193,6 @@
 [submodule "packages/tag_cloud"]
 	path = packages/tag_cloud
 	url = git://github.com/obullo/tag_cloud.git
+[submodule "obullo/2.0"]
+	path = obullo/2.0
+	url = git://github.com/obullo/2.0.git
