--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "obullo/2.0"]
 	path = obullo/2.0
 	url = git://github.com/obullo/2.0.git
+[submodule "obullo/o2"]
+	path = obullo/o2
+	url = git://github.com/obullo/o2.git
