--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 [submodule "obullo/o2"]
 	path = obullo/o2
 	url = git://github.com/obullo/o2.git
+[submodule "version/o2"]
+	path = version/o2
+	url = git://github.com/obullo/o2.git
