updated provide and services

--- a/app/config/env/local/config.env
+++ b/app/config/env/local/config.env
@@ -6,8 +6,8 @@ return array(
         'file' => 'env.local.php',
         'service' => array(
             'logger' => array(
-                'cli' => 'Log/Env/Cli',
-                'http' => 'Log/Env/Local',
+                'cli' => 'Service/Log/Env/Cli',
+                'http' => 'Service/Log/Env/Local',
             ),
         ),
     ),
