--- a/app/config/env/production/config.env
+++ b/app/config/env/production/config.env
@@ -1,13 +1,13 @@
 <?php
 
 return array(
-
+    
     'environment' => array(
         'file' => 'env.local.php',
         'service' => array(
             'logger' => array(
                 'cli' => 'Service/Log/Env/Cli',
-                'http' => 'Service/Log/Env/Local',
+                'http' => 'Service/Log/Env/Production',
             ),
         ),
     ),
@@ -26,7 +26,7 @@ return array(
     ),
     'service' => array(
         'all' => array(
-            'maintenance' => 'up',
+            'maintenance' => 'down',
             'label' => 'All Services',
         ),
         'queue' => array(
@@ -35,6 +35,3 @@ return array(
         ),
     ),
 );
-
-/* End of file config.env */
-/* Location: .app/env/local/config.env */
