added config environment merge feature

--- a/app/config/env/production/config.env
+++ b/app/config/env/production/config.env
@@ -1,37 +1,42 @@
 <?php
 
 return array(
-    
+
     'environment' => array(
         'file' => 'env.local.php',
         'service' => array(
             'logger' => array(
                 'cli' => 'Service/Log/Env/Cli',
-                'http' => 'Service/Log/Env/Production',
+                'http' => 'Service/Log/Env/Local',
             ),
         ),
     ),
     'web' => array(
-        'route' => array(
+        'app' => array(
             'all' => array(
                 'maintenance' => 'up',
                 'label' => 'All Application',
             ),
             'site' => array(
-                'maintenance' => 'up',
+                'maintenance' => 'down',
                 'label' => 'Web Server',
                 'regex' => '^framework$',
             ),
         ),
     ),
     'service' => array(
-        'all' => array(
-            'maintenance' => 'down',
-            'label' => 'All Services',
-        ),
-        'queue' => array(
-            'maintenance' => 'up',
-            'label' => 'Queue Service',
+        'app' => array(
+            'all' => array(
+                'maintenance' => 'up',
+                'label' => 'All Services',
+            ),
+            'queue' => array(
+                'maintenance' => 'up',
+                'label' => 'Queue Service',
+            ),
         ),
     ),
 );
+
+/* End of file config.env */
+/* Location: .app/env/local/config.env */
