added new files

--- a/app/config/production/config.env
+++ b/app/config/production/config.env
@@ -17,7 +17,7 @@ return array(
                 'label' => 'All Application',
             ),
             'site' => array(
-                'maintenance' => 'down',
+                'maintenance' => 'up',
                 'label' => 'Web Server',
                 'regex' => '^framework$',
             ),
