added environments folder

--- a/app/config/environments/test/config.env
+++ b/app/config/environments/test/config.env
@@ -38,4 +38,4 @@ return array(
 );
 
 /* End of file config.env */
-/* Location: .app/config/local/config.env */
+/* Location: .app/config/environments/test/config.env */
