--- a/app/config/environments/production/config.env
+++ b/app/config/environments/production/config.env
@@ -2,33 +2,29 @@
 
 return array(
 
-    'environment' => array(
-        'service' => array(
-            'logger' => array(
+    'service' => array(
+
+        'logger' => array(
+            'env' => array(
                 'cli' => 'Service/Log/Env/Cli',
                 'http' => 'Service/Log/Env/Local',
             ),
+            'label' => 'Logger Service',
+        ),
+        'queue' => array(
+            'maintenance' => 'up',
+            'label' => 'Queue Service',
         ),
     ),
-    'web' => array(
-        'app' => array(
-            'all' => array(
-                'maintenance' => 'up',
-                'label' => 'All Application',
-            ),
-            'site' => array(
-                'maintenance' => 'up',
-                'label' => 'Web Server',
-                'regex' => '^framework$',
-            ),
+    'application' => array(
+        'all' => array(
+            'maintenance' => 'up',
+            'label' => 'All Application',
         ),
-    ),
-    'service' => array(
-        'app' => array(
-            'queue' => array(
-                'maintenance' => 'up',
-                'label' => 'Queue Service',
-            ),
+        'site' => array(
+            'maintenance' => 'up',
+            'label' => 'Web Server',
+            'regex' => '^framework$',
         ),
     ),
 );
