--- a/app/config/env/local/config.env
+++ b/app/config/env/local/config.env
@@ -3,23 +3,22 @@
 return array(
 
     'service' => array(
-
         'logger' => array(
             'env' => array(
                 'cli' => 'Service/Log/Env/Cli',
                 'http' => 'Service/Log/Env/Local',
             ),
-            'label' => 'Logger Service',
+            'label' => 'Log',
         ),
         'queue' => array(
             'maintenance' => 'up',
-            'label' => 'Queue Service',
+            'label' => 'Queue',
         ),
     ),
     'application' => array(
         'all' => array(
             'maintenance' => 'up',
-            'label' => 'All Application',
+            'label' => 'All',
         ),
         'site' => array(
             'maintenance' => 'up',
