--- a/app/config/env/production/config.env
+++ b/app/config/env/production/config.env
@@ -5,24 +5,22 @@ return array(
     'service' => array(
         'logger' => array(
             'env' => array(
-                'cli' => 'Service/Log/Env/Cli',
-                'http' => 'Service/Log/Env/Local',
+                'cli' => 'Service/Logger/Env/Cli',
+                'http' => 'Service/Logger/Env/Local',
             ),
-            'label' => 'Log',
         ),
         'queue' => array(
             'maintenance' => 'up',
-            'label' => 'Queue',
+            'env' => array(),
         ),
     ),
-    'application' => array(
-        'all' => array(
+    'domain' => array(
+        'root' => array(
             'maintenance' => 'up',
-            'label' => 'All',
+            'regex' => null,
         ),
-        'site' => array(
-            'maintenance' => 'down',
-            'label' => 'Web Server',
+        'sub.domain.com' => array(
+            'maintenance' => 'up',
             'regex' => '^framework$',
         ),
     ),
