updated auth middleware, log service, auth service

--- a/.htaccess
+++ b/.htaccess
@@ -8,7 +8,7 @@ Options -Indexes
 # Removes access to the Core folders by users.
 # previously this would not have been possible.
 
-RewriteCond %{REQUEST_URI} ^(app|o2|public)\b.*
+RewriteCond %{REQUEST_URI} ^(app|o2|assets)\b.*
 RewriteRule ^(.*)$ index.php/$1 [L]
 
 # Checks to see if the user is attempting to access a valid file,
