--- a/.htaccess
+++ b/.htaccess
@@ -1,32 +1,16 @@
-RewriteEngine On
 
-# disable directory indexing
+# Disable directory indexing
+
 Options -Indexes
 
-# this is to remove the index.php in url
+# Disables all access to files and directories, sends all request to index.php
 
-# Removes access to the Core folders by users.
-# previously this would not have been possible.
-
-RewriteCond %{REQUEST_URI} ^(app|o2|modules)\b.*
-RewriteRule ^(.*)$ index.php/$1 [L]
-
-# Checks to see if the user is attempting to access a valid file,
-# such as an image or css document, if this isn't true it sends the
-# request to index.php
-
+RewriteEngine on
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteCond %{REQUEST_URI} !=/favicon.ico
+RewriteRule ^(.*)$ index.php/$1 [L]
 
-# This last condition enables access assets folder, and the robots.txt file
-RewriteCond $1 !^(index\.php|assets|robots\.txt)
+# Enable access for "resources/assets" folder, and the "robots.txt" file
 
-RewriteRule ^(.*)$ index.php/$1 [L,QSA]
-AddType text/x-component .htc
- 
-# block access to multiple file types at once, use the code below:-
-<FilesMatch "\.(htaccess|htpasswd|ini|log|sh|inc|bak)$">
-    Order Allow,Deny
-    Deny from all
-</FilesMatch>
+RewriteCond $1 !^(index\.php|resources/assets|robots\.txt)
+RewriteRule ^(.*)$ ./index.php/$1 [L,QSA]
