--- a/public/.htaccess
+++ b/public/.htaccess
@@ -9,9 +9,4 @@ RewriteEngine on
 
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ public/index.php/$1 [L]
-
-# Enable access for "assets" folder, and the "robots.txt" file
-
-RewriteCond $1 !^(index\.php|assets)
-RewriteRule ^(.*)$ public/index.php/$1 [L,QSA]
+RewriteRule ^(.*)$ index.php/$1 [L]
