--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,12 @@
 {
     "autoload": {
         "psr-4": {
-            "Obullo\\": "o2/",
             "": "app/classes"
         }
     },
     "require": {
-        "obullo/service": "^1.0",
         "relay/relay": "^1.0",
-        "ircmaxell/password-compat": "^1.0"
+        "ircmaxell/password-compat": "^1.0",
+        "obullo/service": "^1.1"
     }
 }
