--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,10 @@
         },
         "files": [
             "ircmaxell/password-compat/lib/password.php"
-        ],
+        ]
     },
     "require": {
-        "relay/relay": "^1.0",
+        "psr/http-message": "^1.0",
         "ircmaxell/password-compat": "^1.0",
         "obullo/service-providers": "dev-master",
         "league/event": "^2.1"
