--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "psr/http-message": "^1.0",
         "ircmaxell/password-compat": "^1.0",
         "league/container": "^2.0",
-        "league/event": "^2.1"
+        "league/event": "^2.1",
+        "league/tactician": "^1.0"
     }
 }
