--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,6 @@
         "league/container": "^2.0",
         "league/event": "^2.1",
         "league/plates": "^3.1",
+        "phpunit/phpunit": "5.0.*"
     }
 }
