--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "league/container": "^2.0",
         "league/event": "^2.1",
         "league/plates": "^3.1",
-        "monolog/monolog": "^1.18"
+        "monolog/monolog": "^1.18",
+        "php-amqplib/php-amqplib": "^2.6"
     }
 }
